# Sudoku-offline-app

./: pyproject.toml
src/sudoku/: main.py
src/sudoku/static/: index.html
tests/: test_sudoku.py
